src/objects/OOH_ULAsset__c.object
<CustomObject>
    <description>OOH : Used to store Unilever Cabinet details</description>
    <fields>
        <fullName>OOH_Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_AssetDistributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Asset_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_AssetImageID__c</fullName>
        <label>Asset Image ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_AssetImage__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ OOH_AssetImageID__c ,&quot;Image&quot; , 100, 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_AssetSaleTerminal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Sale Terminal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>OOH Sale Terminal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets At Sale Terminal</relationshipLabel>
        <relationshipName>Asset_Sale_Terminal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_AssetType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <valueField>OOH_AssetType__c.OOH_TypeName__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OOH_AssetType__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>UL_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_Asset_Scrapped_Date__c</fullName>
        <description>Used to store asset scrapped date</description>
        <label>Asset Scrapped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOH_Cabinet_Count__c</fullName>
        <description>This field is used to show cabinet count in cabinet reports</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cabinet Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_Cabinet_Location__c</fullName>
        <description>Used capture sales terminal address</description>
        <formula>OOH_AssetSaleTerminal__r.BillingStreet+&quot;,&quot;+OOH_AssetSaleTerminal__r.BillingCity+&quot;,&quot;+ OOH_AssetSaleTerminal__r.BillingCountry +&quot;,&quot;+ OOH_AssetSaleTerminal__r.BillingState +&quot;,&quot;+   OOH_AssetSaleTerminal__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cabinet Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_Contract__c</fullName>
        <label>Contract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_First_Install_Date__c</fullName>
        <description>Used to capture first installation date of Asset</description>
        <label>First Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOH_Image__c</fullName>
        <formula>image(&apos;http://www.millsdisplay.com.au/shop/images/biggalleryimg1.gif&apos;,&apos;&apos;,300,300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_Inactive_Flag__c</fullName>
        <description>This flag is used in report to check inactive assets</description>
        <formula>IF( OR(ISNULL(OOH_AssetSaleTerminal__c), ISBLANK(OOH_AssetSaleTerminal__c)), true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOH_LastControlDate__c</fullName>
        <label>Last Control Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOH_LastMoveDate__c</fullName>
        <label>Last Move Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OOH_Location_status__c</fullName>
        <formula>IF(OOH_AssetSaleTerminal__c = NULL, &quot;In warehouse&quot;, &quot;Positioned&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_Model__c</fullName>
        <formula>OOH_AssetType__r.OOH_ModelName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_New_Asset__c</fullName>
        <description>Used to calculate sum of new assets (installed current year) in reports</description>
        <formula>IF(YEAR( OOH_First_Install_Date__c )= YEAR(TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_Point_Of_Sale_Outlet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Point Of Sale Outlet</label>
        <referenceTo>OOH_PointofSaleOutlet__c</referenceTo>
        <relationshipLabel>Assets on POS Outlet</relationshipLabel>
        <relationshipName>UL_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_Scrapped__c</fullName>
        <description>This field is used in report to aggregate no. of scrapped assets (cabinets)</description>
        <formula>IF( OR( ISBLANK(OOH_Asset_Scrapped_Date__c), ISNULL(OOH_Asset_Scrapped_Date__c) ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrapped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_UnderPerforming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Performing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OOH_UnderPerformingunchecked__c</fullName>
        <description>this is the field to used for the cabinet report find low consumption value</description>
        <formula>if( OOH_UnderPerforming__c =false,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under Performing unchecked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_UnderperformingCount__c</fullName>
        <description>this is the field to used for the cabinet report find low consumption value</description>
        <formula>if( OOH_UnderPerforming__c =true,1,0)</formula>
        <label>Under performing Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NEVERAS (&gt;150)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITRINAS &lt; 16 SABORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMARIOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESPECIALES (&lt;150)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIOSCOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISLAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORNETTO SOFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITRINAS &gt; 16 SABORES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRANIZADORAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MODULOS CARTE D&apos;OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISIMAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAF├ë ZERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIN FRIO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>scaned__c</fullName>
        <formula>if( year(OOH_LastControlDate__c)=Year(today()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>scaned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>UL Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OOH_Age__c</columns>
        <columns>OOH_AssetDistributor__c</columns>
        <columns>OOH_AssetSaleTerminal__c</columns>
        <columns>Type__c</columns>
        <columns>OOH_LastControlDate__c</columns>
        <columns>OOH_LastMoveDate__c</columns>
        <columns>OOH_AssetImage__c</columns>
        <columns>OOH_Inactive_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Asset ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UL Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>